fix: fixed lighthouse issue of layout shift

--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -152,3 +152,16 @@ li[fehover] {
     @apply hidden;
   }
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-delay {
+  animation: fade-in forwards;
+}
